--- a/4.06-Exercise-ConfigureSigning/app/build.gradle
+++ b/4.06-Exercise-ConfigureSigning/app/build.gradle
@@ -20,13 +20,11 @@ The solution to this exercise is essentially Demo 4.05
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
-
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.udacity.gradle.automaticsigning"
-        minSdkVersion 15
-        targetSdkVersion 24
+        minSdkVersion 23
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -39,6 +37,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
 }
