--- a/4.06-Exercise-ConfigureSigning/app/build.gradle
+++ b/4.06-Exercise-ConfigureSigning/app/build.gradle
@@ -1,4 +1,5 @@
 /*
+VIDEO: Lesson 4: Adv. Android Builds: 12. Configuring Signing
 
 In this exercise you'll configure signing and deploy a release build.
 
@@ -20,6 +21,14 @@ The solution to this exercise is essentially Demo 4.05
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'Udacity'
+            keyPassword 'letmein1'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword 'letmein1'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.udacity.gradle.automaticsigning"
@@ -32,11 +41,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
 }
